# elvira

./: CMakeLists.txt  README.md  build  command  constants.c  constants.h  controller.c  elvira.c  engine.c  engine.h  engine_data.h  enginegroup.c  example.json  format  host.c  main.c  node.c  node.go  node.h  node_data.h  ports.c  ports.h  program.c  program.h  stb_ds.h  ui.c  util.c  util.h
ATTIC/: destroy  util.h
elwira/: browsefs.go  build  controls.go  elvira.go  elwira.go  go.mod  links.go  logs.go  lv2.go  main.go  nodes.go  pw.go
elwira/cgi-bin/: command.sh  create_engine.sh  create_instance.sh  delete_engine.sh  engines.sh  host_info_base.sh  host_info_ports.sh  instances.sh  lv2ls.sh  metadata.sh  plugin_presets.sh
elwira/lilv/: lilv.go
elwira/static/: browsefs.css  browsefs.js  component.js  control-inputs.html  controls.html  elvira.js  index.html  midicc.html  params.html  params.js  slider.html
elwira/static/control/: index.html  main.js  static+dynamic.html
elwira/static/control/components/: base_element.js  endpoint_components.js  file_components.js  view_components.js
elwira/static/system/: index.html  main.js  ui-config.json
elwira/static/system/components/: elvira-control.html  elvira-control.js  elvira-filepath.html  elvira-filepath.js  elvira-select.html  elvira-select.js  elvira-slider.html  elvira-slider.js  elvira-slider.js.save  elvira-target-control.js  elvira-target-midicc.js  elvira-target-parameter.js  file-browser-dialog.html  file-browser-dialog.js  file-path-input.html  file-path-input.js  file-selector-dialog.html  file-selector-dialog.js  target_component.js  template_component.js  template_loader.js  view_component.js
example/: example.json  example.yaml
script/: list-engines
src/: connect.c  constants.c  constants.h  controller.c  controller.h  elvira.c  engine.c  engine.h  engine_data.h  engine_ports.c  engine_ports.h  engine_types.h  enginegroup.h  handler.h  handler_command.c  handler_destroy.c  handler_host.c  handler_metadata.c  handler_param.c  handler_process.c  handler_registry.c  handler_state.c  handler_ui.c  host.c  host.h  host_ports.c  host_ports.h  host_types.h  node.c  node.h  node_types.h  ports.c  ports.h  pwfilter.c  pwfilter.h  runtime.c  runtime.h  set.c  set.h  ui.c  (+3 more)
src/common/: types.h
src/controller/: controller.c  controller.h
src/engine/: engine.c  engine.h  engine_data.h  host.c  host.h  host_ports.c  host_ports.h  node.c  node.h  ports.c  ports.h  pwfilter.c  types.h  ui.c
src/enginegroup/: enginegroup.c  enginegroup.h
src/host/: host.c  host.h  host_ports.c  host_ports.h  host_types.h  ui.c
src/node/: node.c  node.h  node_types.h
src/set/: set.c  set.h
src/utils/: cJSON.c  cJSON.h  constants.c  util.c
systemd/: run_elvira_service.sh
tools/: build  format
utils/: util.c
